--- a/css/pages/inventory_equipments.css
+++ b/css/pages/inventory_equipments.css
@@ -142,7 +142,7 @@ main {
 }
 .container-actions {
     height: 90%;
-    width: 85%;
+    width: 90%;
     position: relative;
     display: flex;
     background: #FFFFFF;
@@ -152,12 +152,12 @@ main {
 
 #root-actions {
     height: 100%;
-    width: 80%;
+    width: 78%;
     position: relative;
     overflow-y: auto;
     overflow-x: hidden;
     box-sizing: border-box;
-    background: #FAFAFA;
+    background: #FFFFFF;
 }
 
 #root-actions h2 {
@@ -220,12 +220,34 @@ main {
 }
 #form-update-device textarea:focus { border: 1px solid #BDBDBD; }
 
+/* Estilo de la barra de navagacion de las acciones */
 #nav-actions {
     height: 100%;
-    width: 20%;
+    width: 22%;
     position: relative;
     box-sizing: border-box;
 }
+
+#nav-actions ul {
+    margin: 20% 0 0 10%;
+    height: auto;
+    width: 90%;
+    box-sizing: border-box;
+    border-left: 3px solid #F5F5F5;
+}
+
+#nav-actions ul li {
+    padding: 5% 0 3% 5%;
+    user-select: none;
+}
+
+#nav-actions ul li:hover {
+    background: #EEEEEE;
+}
+
+.selected-actions__li { color: #1A73E8; }
+
+
 /* Estilos de la tabla de equipos informaticos */
 .container-table__devices {
     height: 85%;
@@ -517,6 +539,7 @@ main {
     width: 50%;
     position: relative;
     box-sizing: border-box;
+    border-right: 2px solid #EEEEEE;
 }
 
 .file-bill input {
@@ -534,8 +557,8 @@ main {
     position: absolute;
     display: flex;
     align-items: center;
-    padding: 0 !important;
-    background: #FFFFFF;
+    padding: 0 0 0 5% !important;
+    background: #F5F5F5;
     box-sizing: border-box;
 }
 
@@ -543,9 +566,197 @@ main {
     height: 100%;
     width: 50%;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.control__bill button {
+    padding: 3%;
+    border: 1px solid #E0E0E0;
+    background: #F5F5F5;
     box-sizing: border-box;
 }
 
 .description_action-bill {
-    
+    padding: 0 0 3% 5%;
+    font-family: "Montserrat", sans-serif;
+    font-size: .9em;
+    text-align: left;
+    font-optical-sizing: auto;
+    font-weight: 550;
+    font-style: normal;
+    color: #6B7280;
+}
+
+/* Estilos de la seccion de resguardantes */
+.title-employeeProtective {
+    padding: 4% 0 7% 5% !important;
+}
+
+.message-not-protective {
+    height: auto;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10% auto;
+}
+
+.message-not-protective img {
+    width: 30%;
+}
+
+.container-protective-employee {
+    height: 80%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    overflow-y: auto;
+    overflow-x: none;
+}
+
+.root-protective__card {
+    height: min-content;
+    width: 50%;
+    position: relative;
+} 
+
+.card-protective {
+    height: auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.card-protective p span { color: #212121; }
+.card-protective p { color: #616161; }
+
+.circle-decoration-protective {
+    height: .5em;
+    width: .5em;
+    background: #F5F5F5;
+    border: 1px solid #BDBDBD;
+    border-radius: 100%;
+    margin-right: 4%;
+    margin-left: 2.1%;
+}
+
+.line-decoration-protective {
+    height: 2em;
+    width: 1px;
+    background: #EEEEEE;
+    margin-left: 3%;
+}
+
+.card-protective__email {
+    margin-top: 5px;
+    height: 15em;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.circle-email-protective {
+    height: 100%;
+    width: 10%;
+    position: relative;
+}
+
+.circle-decorationImage-protective {
+    height: 2em;
+    width: 2em;
+    display: flex;
+    justify-content: center;
+    border-radius: 100%;
+    background: #F5F5F5;
+    border: 1px solid #BDBDBD;
+}
+
+.circle-decorationImage-protective img {
+    width: 50%;
+    display: block;
+}
+
+.container-email-protective {
+    height: 100%;
+    width: 90%;
+    position: relative;
+}
+
+.card-email {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    border: 1px solid #E0E0E0;
+    border-radius: .5em;
+    overflow: hidden;
+}
+
+.card-email .container-title__email {
+    padding: 2% 0 2% 4%;
+    background: #EFEBE9;
+}
+
+#form-email-protective {
+    height: auto;
+    width: 100%;
+    box-sizing: border-box;
+    position: relative;
+}
+
+#form-email-protective div:first-child {
+    height: 2.5em;
+    width: 92.5%;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    border-bottom: 1px solid #EEEEEE;
+    margin-bottom: 2%;
+}
+
+#form-email-protective div:first-child label {
+    color: #212121;
+}
+
+#form-email-protective div:first-child input {
+    height: 100%;
+    width: 85%;
+    margin-left: 2%;
+    box-sizing: border-box;
+    border: 0;
+    outline: none;
+}
+
+.container-message__form {
+    height: 6.5em;
+    width: 92.5%;
+    display: block;
+    margin: 0 auto;
+}
+
+#message {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    resize: none;
+    border: 0;
+    outline: none;
+    box-sizing: border-box;
+}
+
+#send-email {
+    background: none;
+    border: 1px solid #E0E0E0;
+    position: absolute;
+    right: 3%;
+    padding: 2%;
+    border-radius: .5em;
+    font-weight: 700;
 }
