--- a/css/pages/inventory_equipments.css
+++ b/css/pages/inventory_equipments.css
@@ -760,3 +760,181 @@ main {
     border-radius: .5em;
     font-weight: 700;
 }
+
+/* Estilos de añadir gastos */
+#form-add-expenses {
+    height: 80%;
+    width: 80%;
+    position: relative;
+    display: block;
+    margin: 0 auto;
+}
+
+.firstInputs__expends {
+    height: 20%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    box-sizing: border-box;
+}
+
+.firstInputs__expends div:first-child {
+    height: 100%;
+    width: 50%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.firstInputs__expends div:first-child label {
+    padding: 5% 0 5% 0;
+}
+
+.firstInputs__expends div:first-child input {
+    height: 30%;
+    width: 90%;
+    box-sizing: border-box;
+    outline: none;
+}
+
+.firstInputs__expends .last-div {
+    height: 100%;
+    width: 50%;
+    position: relative;
+    box-sizing: border-box;
+}
+
+.firstInputs__expends .last-div #label_quantity {
+    padding: 5% 0 5% 0;
+    position: relative;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+.firstInputs__expends .last-div .container-quantity-root {
+    height: 30%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    box-sizing: border-box;
+    border: 1px solid black;
+    overflow: hidden;
+}
+
+.firstInputs__expends .last-div .container-quantity-root input {
+    height: 100%;
+    width: 75%;
+    border: none;
+    outline: none;
+}
+
+.container-quantity {
+    height: 100%;
+    width: 25%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-left: 1px solid black;
+}
+
+.secondInputs__expends {
+    height: 20%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.secondInputs__expends-div {
+    height: 100%;
+    width: 50%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.secondInputs__expends-div label {
+    padding: 5% 0 5% 0;
+}
+
+#date {
+    height: 30%;
+    width: 90%;
+    box-sizing: border-box;
+}
+
+.secondInputs__expends-unitPrice {
+    height: 30%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    box-sizing: border-box;
+}
+
+#unitPrice {
+    height: 100%;
+    width: 75%;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+}
+
+.container-pesos {
+    height: 100%;
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-left: 1px solid black;
+}
+
+.container-file-pdf {
+    margin-top: 2%;
+    height: 40%;
+    width: 100%;
+    position: relative;
+    border: 1px dashed black;
+}
+
+#pdf {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    box-sizing: border-box;
+}
+
+#label-pdf {
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #FFFFFF;
+}
+
+#label-pdf svg {
+    height: 25%;
+    width: 25%;
+    margin-bottom: 3%;
+    fill: #616161;
+    display: block;
+}
+
+#add-expenses {
+    padding: 1% 3%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
