--- a/css/components/navegation.css
+++ b/css/components/navegation.css
@@ -7,6 +7,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #FFFFFF;
     border-bottom: 2px solid #E0E0E0;
 }
 header .opc-logo { position: absolute; left: 2%; width: 7%; }
