--- a/css/pages/safeguards.css
+++ b/css/pages/safeguards.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 main { display: flex; }
 main section {
     height: 100%;
@@ -109,62 +111,97 @@ main section .first_article .second_div {
     align-items: center;
     position: relative;
 }
-table {
-    margin-top: 5%;
-    height: 75%;
+
+/* Estilos de las tablas */
+.root-container-table {
+    margin-top: 2%;
+    height: 88%;
     width: 90%;
-    border-collapse: collapse;
+    position: relative;
+    border: 1px solid #E0E0E0;
     box-sizing: border-box;
-    table-layout: fixed;
-    background: #FAFAFA;
-    border: 2px solid #EEEEEE;
-}
-table thead {
-    background: #FAFAFA;
-    color: #757575;
-}
-table thead tr th { text-align: center; }
-table thead tr th:first-child { width: 20%; }
-table thead tr th { width: 60%; }
-table thead tr th:last-child {
-    width: 20%;
-}
-table caption {
-text-align: left;
+    border-radius: .5em;
+    overflow: hidden;
 }
 
-td,
-th {
-padding: 6px;
-text-align: left;
-vertical-align: top;
-word-wrap: break-word;
+.container-title__safeguards {
+    height: 12%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-sizing: border-box;
 }
 
-thead {
-border-bottom: 1px solid #dbdbdb;
-border-bottom: 1px solid #dbdbdb;
+.container-table-devices__authSafeguards {
+    height: 88%;
+    width: 100%;
+    position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
-tfoot {
-border-top: 1px solid #dbdbdb;
-border-top: 1px solid #dbdbdb;
+.container-title__safeguards h2 {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-size: .9em;
+    font-weight: 700;
+    font-style: normal;
+    padding-top: .5em;
+    padding-bottom: .8em;
+    color: #424242;
 }
 
-tbody tr:nth-child(even) {
-background-color: #efefef;
-background-color: #efefef;
+table { margin-top: 2%; height: auto; width: 100%; position: relative; }
+table thead { height: auto; width: 100%; position: relative; }
+table thead tr { height: auto; width: 100%; position: relative; border-bottom: 1px solid #BDBDBD; }
+table thead tr th {
+    height: auto;
+    position: relative;
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+    font-size: .9em;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    color: #212121; 
+    text-align: left;
+    padding: .8em;
+    box-sizing: border-box;
 }
 
-tbody tr:nth-child(even) button {
-background-color: #f7f7f7;
-background-color: #f7f7f7;
+table thead tr th:first-child { width: 25%; padding-left: 5%; }
+table thead tr th:nth-child(2) { width: 60%; }
+table thead tr th:last-child { width: 15%; }
+
+table tbody { height: auto; width: 100%; position: relative; box-sizing: border-box; }
+table tbody tr {
+    height: auto;
+    width: 100%;
+    position: relative;
+    border-bottom: 1px solid #E0E0E0;
+    box-sizing: border-box;
 }
 
-tbody tr:nth-child(even) button:hover {
-background-color: #fff;
-background-color: #fff;
+table tbody tr td {
+    padding: 1.7% 0;
+    height: auto;
+    position: relative;
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+    font-size: .8em;
+    text-align: left;
+    font-optical-sizing: auto;
+    font-weight: 550;
+    font-style: normal;
+    color: #6B7280;
 }
+
+table tbody tr td:first-child { padding-left: 5%; color: #212121; }
+table tbody tr td:last-child button { height: 100%; width: 55%; color: #0277BD; font-weight: 700; background: none; border: none; }
+
 .divParent__modal {
     height: 100vh;
     width: 100vw;
@@ -223,26 +260,61 @@ background-color: #fff;
     background: #833F0E;
     position: relative;
 }
-.container-button__auth {
-    margin-top: 5%;
-    height: 15%;
-    width: 100%;
+.container-safeguards__button {
+    height: 10%;
+    width: 90%;
+    position: relative;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    box-sizing: border-box;
 }
-.container-button__auth button {
-    height: 50%;
-    width: 24%;
-    border: none;
-    color: #F5F5F5;
+
+#observation_button,
+#observation_button-return {
+    height: 60%;
+    width: 30%;
+    position: absolute;
+    left: 0;
+    background: none;
+    color: #424242;
     font-weight: 700;
-    font-size: .9em;
-    border-radius: 5px;
+    border: 1px solid #BDBDBD;
+    border-radius: .3em;
 }
-#auth__button { background: #833F0E; }
-#cancel__button { background:  rgba(183, 28, 28, 0.9); }
-#observation_button { background: #616161; }
+
+#observation_button:hover, #observation_button-return:hover { background: #FAFAFA; }
+
+#cancel__button,
+#cancel__button-return {
+    height: 60%;
+    width: 30%;
+    position: absolute;
+    left: 35%;
+    background: #FFCDD2;
+    border: 1px solid #B71C1C;
+    color: #D32F2F;
+    font-size: .8em;
+    font-weight: 700;
+    border-radius: .3em;
+    box-sizing: border-box;
+}
+
+#auth__button,
+#auth__button-return {
+    height: 60%;
+    width: 30%;
+    position: absolute;
+    right: 0;
+    background: #01579B;
+    border-radius: .3em;
+    border: none;
+    color: #FAFAFA;
+    font-size: .8em;
+    font-weight: 700;
+    box-sizing: border-box;
+}
+
 #observation__auth-textarea {
     height: 20%;
     width: 90%;
@@ -355,15 +427,7 @@ main section .second_article .first_div .container-nameuser__return {
     justify-content: center;
     align-items: center;
 }
-#cancel__button-return {
-    background: #616161;
-}
-#auth__button-return {
-    background: #833F0E;
-}
-#observation_button-return {
-    background: #01579B;
-}
+
 #observation__auth-textarea-return {
     height: 20%;
     width: 90%;
