--- a/css/pages/inventory_equipments.css
+++ b/css/pages/inventory_equipments.css
@@ -1149,3 +1149,147 @@ main {
 }
 
 .list-image-device li:last-child { border-bottom: none; }
+
+.close-window-image {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.7);
+    left: 0;
+    top: 0;
+}
+
+.root-image {
+    height: 80%;
+    max-width: 80%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.root-image img {
+    width: 100%;
+    height: auto;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+.delete-image__device {
+    height: 2em;
+    width: 2em;
+    position: absolute;
+    display: flex;
+    background: rgba(224, 224, 224, 0.5);
+    align-items: center;
+    justify-content: center;
+    top: 2%;
+    right: 2%;
+    z-index: 200;
+    border: 1px solid #9E9E9E;
+}
+
+#change-status__device {
+    margin-left: 57%;
+    height: 3em;
+    width: 20%;
+    color: #B71C1C;
+    font-family: "Montserrat", sans-serif;
+    font-size: .8em;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    background: none;
+    border-radius: .3em;
+    border: 1px solid #F44336;
+    box-sizing: border-box;
+}
+
+.root-form-device-low { top: 0; position: absolute; height: 100%; width: 100%; }
+
+#form-device-low {
+    margin: 40% 0 0 5%;
+    height: 35%;
+    width: 50%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background: #FFFFFF;
+    border: 2px solid #EEEEEE;
+    border-radius: .3em;
+    box-sizing: border-box;
+}
+
+#form-device-low label {
+    color: #212121;
+    font-family: "Montserrat", sans-serif;
+    font-size: .8em;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    padding: 1em 0 1em 3%;
+}
+
+#form-device-low textarea {
+    height: 9em;
+    width: 94%;
+    margin: 1em 0 1em 3%;
+    border: none;
+    outline: none;
+    resize: none;
+}
+
+#form-device-low textarea::placeholder {
+    color: #616161;
+    font-family: "Montserrat", sans-serif;
+    font-size: .9em;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.container-buttons-device-low {
+    margin-top: .5em;
+    height: 3em;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid #EEEEEE;
+}
+
+.container-buttons-device-low button:first-child {
+    position: absolute;
+    right: 21%;
+    height: 70%;
+    background: none;
+    border: 1px solid #F44336;
+    color: #B71C1C;
+    font-family: "Montserrat", sans-serif;
+    font-size: .8em;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    padding: 0 1em 0 1em;
+    border-radius: .3em;
+}
+
+.container-buttons-device-low button:last-child {
+    position: absolute;
+    right: 3%;
+    height: 70%;
+    background: #01579B;
+    border: 0;
+    color: #FAFAFA;
+    font-family: "Montserrat", sans-serif;
+    font-size: .8em;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    padding: 0 1em 0 1em;
+    border-radius: .3em;
+}
