Filtros en la seccion de ver todos los equipos funcional

--- a/css/components/forms-account.css
+++ b/css/components/forms-account.css
@@ -122,3 +122,9 @@
     transition: right 1s;
     z-index: 400;
 }
+
+#spanPasswordView1,
+#spanPasswordView2 {
+    user-select: none;
+    cursor: pointer;
+}
