--- a/css/pages/inventory_equipments.css
+++ b/css/pages/inventory_equipments.css
@@ -1339,3 +1339,373 @@ main {
 }
 
 .message-table img { margin-top: 5em; width: 20%; }
+
+/* Formulario para actualizar los datos del equipo */
+#form-equipment {
+    height: 77%;
+    width: 95%;
+    position: relative;
+    margin: 0 0 0 5%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    box-sizing: border-box;
+}
+
+.containerInput__flex {
+    height: 5em;
+    width: 95%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid #E0E0E0;
+    margin-bottom: 0%;
+    box-sizing: border-box;
+}
+
+.containerInput__flex label { padding: 0; font-size: 1em; font-weight: 500; color: #111827; }
+
+.container-category, .container-brand {
+    height: 90%;
+    width: auto;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    right: 30.5%;
+    display: flex;
+}
+
+.container-category select, .container-brand select {
+    height: 60%;
+    width: 30em;
+    color: #212121;
+    background: #FFFFFF;
+    border: 1px solid #BDBDBD;
+    margin-right: 1em;
+    box-sizing: border-box;
+}
+
+.container-category button, .container-brand button {
+    height: 60%;
+    width: 3.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: 1px solid #BDBDBD;
+    box-sizing: border-box;
+    border-radius: .4em;
+}
+
+.container-category button:hover, .container-brand button:hover { background: #FAFAFA; } 
+
+.containerInput__flex:nth-child(3) .containe__codeequipment {
+    height: 56%;
+    width: 25em;
+    position: absolute;
+    right: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid #BDBDBD;
+    border-radius: .3em;
+    overflow: hidden;
+}
+
+.containerInput__flex:nth-child(3) .containe__codeequipment div {
+    height: 100%;
+    width: 30%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid #BDBDBD;
+    background: #FAFAFA;
+} 
+
+.containerInput__flex:nth-child(3) .containe__codeequipment div span {
+    font-size: .9em;
+    color: #212121;
+    user-select: none;
+}
+
+.containerInput__flex:nth-child(3) .containe__codeequipment input {
+    height: 100%;
+    width: 70%;
+    position: relative;
+    outline: none;
+    box-sizing: border-box;
+    border: none;
+    padding-left: 3%;
+}
+
+.containerInput__flex > input {
+    height: 54%;
+    width: 30em;
+    position: absolute;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+    border: 1px solid #BDBDBD;
+    border-radius: .3em;
+    padding-left: 2%;
+}
+
+.containerInput__flex > input:focus { border: 2px solid #616161; }
+
+.containerInput__flex:nth-child(4) input,
+.containerInput__flex:nth-child(5) input,
+.containerInput__flex:nth-child(6) input,
+.containerInput__flex:nth-child(7) input,
+.containerInput__flex:nth-child(9) input { right: 30%; }
+
+.containerInput__flex:nth-child(8) input {  right: 25%;}
+
+.containerInput__flex:nth-child(10), 
+.containerInput__flex:nth-child(16) { height: 10em; }
+.containerInput__flex:nth-child(16) { border-bottom: 1px solid #E0E0E0; }
+
+.containerInput__flex:nth-child(10) label, .containerInput__flex:nth-child(16) label { position: absolute; top: 20%; }
+.containerInput__flex:nth-child(10) textarea, .containerInput__flex:nth-child(16) textarea {
+    top: 20%;
+    right: 16.5%;
+    height: 65%;
+    width: 50%;
+    padding: 1%;
+    resize: none;
+    position: absolute;
+    box-sizing: border-box;
+    border: 1px solid #BDBDBD;
+    border-radius: .3em;
+}
+
+.containerInput__flex:nth-child(11) input { right: 25%; }
+.containerInput__flex:nth-child(12) input, .containerInput__flex:nth-child(13) input { right: 30%; }
+
+.containerInput__flex:nth-child(14), 
+.containerInput__flex:nth-child(15) {
+    height: 15em;
+} 
+
+.containerInput__flex:nth-child(14) .container__inputfile,
+.containerInput__flex:nth-child(15) .container__inputfile {
+    right: 6.5%;
+    height: 80%;
+    width: 60%;
+    position: absolute;
+    border: 1px dashed #BDBDBD;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.containerInput__flex:nth-child(14) .container__inputfile input,
+.containerInput__flex:nth-child(15) .container__inputfile input {
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+.containerInput__flex:nth-child(14) .container__inputfile label,
+.containerInput__flex:nth-child(15) .container__inputfile label {
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #FFFFFF;
+}
+
+.containerInput__flex:nth-child(14) .container__inputfile label svg,
+.containerInput__flex:nth-child(15) .container__inputfile label svg {
+    height: 25%;
+    width: 25%;
+    margin-bottom: 3%;
+    fill: #000;
+    display: block;
+}
+
+#sendDataDevices {
+    padding: 1% 0;
+    width: 10%;
+    display: block;
+    margin: 2% 0 1.5% 85%;
+    box-sizing: border-box;
+}
+
+#root__category-brand {
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    z-index: 500;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.container-category-brand {
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 30%;
+    position: absolute;
+    background: #FAFAFA;
+}
+
+.containerTitle__category-brand {
+    height: 9%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.containerTitle__category-brand h2 { font-size: 1.2em; font-weight: 700; color: #212121; }
+
+.close-category-brand {
+    height: auto;
+    width: auto;
+    position: relative;
+    margin-right: 4%;
+    box-sizing: border-box;
+    border: 0;
+    background: none;
+}
+
+.containerTitle__category-brand .title-category { position: absolute; left: 13%; }
+.containerTitle__category-brand svg:first-child { margin-left: 5%; }
+.container-category-brand p { color: #757575; font-size: 1em; font-weight: 540; padding: 3% 2% 13% 5%; }
+
+.form-category-brand {
+    height: 75%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.form-category-brand input {
+    height: 9%;
+    width: 90%;
+    position: relative;
+    outline: none;
+    border: 1px solid #EEEEEE;
+    background: #F5F5F5;
+    margin-left: 5%;
+    border-radius: .3em;
+    padding-left: 3%;
+    box-sizing: border-box;
+}
+
+.form-category-brand label { padding-left: 5%; }
+
+.containerCategory__flex {
+    height: 7%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    margin-bottom: 5%;
+}
+
+.containerCategory__flex:first-child { margin-bottom: 10%; }
+
+.containerCategory__flex select {
+    height: 100%;
+    width: 89%;
+    margin-left: 5%;
+    box-sizing: border-box;
+}
+
+.containerCategory__flex button {
+    height: 100%;
+    width: 12%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 4%;
+    margin-right: 5%;
+    border: 1px solid #EEEEEE;
+    background: #F5F5F5;
+    border-radius: .3em;
+    box-sizing: border-box;
+}
+
+.containerCategory__flex button:hover { background: #EEEEEE; }
+
+.containerCategory__flex input {
+    height: 100%;
+    width: 74%;
+    position: relative;
+    outline: none;
+    border: 1px solid #EEEEEE;
+    background: #F5F5F5;
+    margin-left: 5%;
+    border-radius: .3em;
+    padding-left: 3%;
+    box-sizing: border-box;
+}
+
+#listSubcategory {
+    height: 53%;
+    width: 100%;
+    position: relative;
+    box-sizing: border-box;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#listSubcategory li {
+    height: 2em;
+    width: 95%;
+    margin-left: 5%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+#listSubcategory li span {  color: #424242; }
+
+#listSubcategory li .circle-subcategory {
+    margin-right: .5em;
+    height: .8em;
+    width: .8em;
+    background: #F5F5F5;
+    border: 1px solid #BDBDBD;
+    border-radius: 100%;
+    box-sizing: border-box;
+}
+
+#listSubcategory li button {
+    right: 5%;
+    border: 1px solid #E0E0E0;
+    background: #F5F5F5;
+    color: #BDBDBD;
+    position: absolute;
+}
+
+.form-category-brand > button {
+    bottom: 0;  
+    border: 0;
+    height: 8%;
+    width: 80%;
+    position: absolute;
+    display: block;
+    background: #833F0E;
+    color: #FAFAFA;
+    font-size: 1;
+    font-weight: 700;
+    margin-left: 10%;
+    box-sizing: border-box;
+    border-radius: .5em;
+}
