Error de carga de archivos en la seccion de actualizar datos del equipos arreglado

--- a/css/pages/inventory_equipments.css
+++ b/css/pages/inventory_equipments.css
@@ -1710,3 +1710,10 @@ main {
     box-sizing: border-box;
     border-radius: .5em;
 }
+
+.container-countDevices {
+    height: 50%;
+    width: 100%;
+    position: relative;
+    background: purple;
+}
