--- a/css/pages/inventory_equipments.css
+++ b/css/pages/inventory_equipments.css
@@ -1712,8 +1712,78 @@ main {
 }
 
 .container-countDevices {
-    height: 50%;
-    width: 100%;
-    position: relative;
-    background: purple;
+    height: auto;
+    width: 77%;
+    position: absolute;
+    left: 15%;
+    bottom: 2%;
+    background: #FFFFFF;
+    border: 2px solid #E0E0E0;
+    box-sizing: border-box;
+}
+
+.container-countDevices h2 {
+    padding: 10% 0 10% 5%;
+    color: #0F172A;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1em;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.container-countDevices ul {
+    height: auto;
+    width: 95%;
+    margin-left: 5%;
+}
+
+.container-countDevices ul li {
+    padding: .5em 0;
+    color: #475569;
+    font-family: "Montserrat", sans-serif;
+    font-size: .9em;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.container-countDevices ul li:last-child { padding-bottom: 10%; }
+
+.container-countDevices ul li span { color: #0F172A; font-weight: 700; }
+
+.container-searchNumberPhone { left: 44%; position: absolute; } 
+
+.container-searchNumberPhone label { user-select: none; }
+
+.message-not-expenses {
+    height: auto;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10% auto;
+} 
+
+.message-not-expenses p {
+    color: #475569;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1em;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.message-not-expenses img { width: 27%; }
+
+.message-not-expenses button {
+    background: none;
+    border: 0;
+    color: #01579B;
+    font-family: "Montserrat", sans-serif;
+    font-size: .9em;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
 }
